# Dailo/Habit.Application/Models/FrequencyModel.cs
@@ -1,0 +1,5 @@
+using Habit.Domain.Enums;
+
+namespace Habit.Application.Models;
+
+public sealed record FrequencyModel(FrequencyType Type, int TimesPerPeriod);
