# Dailo/Habit.Application/Models/MilestoneModel.cs
@@ -1,0 +1,3 @@
+namespace Habit.Application.Models;
+
+public sealed record MilestoneModel(int Target, int Current);
