# Dailo/Habit.Application/Models/TargetModel.cs
@@ -1,0 +1,3 @@
+namespace Habit.Application.Models;
+
+public sealed record TargetModel(int Value, string Unit);
